// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With Registry Account Risk Risk Factors: ETH / USDC 1`] = `
Object {
  "_isTokenBalance": true,
  "hex": "0x0439a3c132c4e800",
  "network": "arbitrum",
  "tokenId": "0x0000000000000000000000000000000000000000",
}
`;

exports[`With Registry Account Risk Risk Factors: ETH / USDC 2`] = `
Object {
  "_isTokenBalance": true,
  "hex": "0xb83a3699ef4300",
  "network": "arbitrum",
  "tokenId": "0x0000000000000000000000000000000000000000",
}
`;

exports[`With Registry Account Risk Risk Factors: ETH / USDC 3`] = `69.5545496`;

exports[`With Registry Account Risk Risk Factors: ETH / USDC 4`] = `143.7720471`;

exports[`With Registry Account Risk Risk Factors: ETH / USDC 5`] = `1.0683977734379138`;

exports[`With Registry Account Risk Risk Factors: ETH / USDC 6`] = `2.284563013`;

exports[`With Registry Account Risk Risk Factors: ETH / USDC 7`] = `
Object {
  "_isTokenBalance": true,
  "hex": "0x0d287c7cee8c3b58",
  "network": "arbitrum",
  "tokenId": "0x0000000000000000000000000000000000000000",
}
`;

exports[`With Registry Account Risk Risk Factors: ETH / USDC 8`] = `
Object {
  "_isTokenBalance": true,
  "hex": "0x106579",
  "network": "arbitrum",
  "tokenId": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
}
`;

exports[`With Registry Account Risk Risk Factors: ETH / USDC 9`] = `
Object {
  "_isTokenBalance": true,
  "hex": "0x68005a77",
  "network": "arbitrum",
  "tokenId": "0xff970a61a04b1ca14834a43f5de4533ebddb5cc8",
}
`;

exports[`With Registry Account Risk Risk Factors: ETH / USDC 10`] = `
Object {
  "_isTokenBalance": true,
  "hex": "0x61af5c",
  "network": "arbitrum",
  "tokenId": "0xabc07bf91469c5450d6941dd0770e6e6761b90d6",
}
`;

exports[`With Registry Account Risk Risk Factors: Leveraged fCash Spread 1`] = `
Object {
  "_isTokenBalance": true,
  "hex": "-0x0135f25ae49c00",
  "network": "arbitrum",
  "tokenId": "0x0000000000000000000000000000000000000000",
}
`;

exports[`With Registry Account Risk Risk Factors: Leveraged fCash Spread 2`] = `0.813708434288799`;

exports[`With Registry Account Risk Risk Factors: Leveraged fCash Spread 3`] = `
Object {
  "_isTokenBalance": true,
  "hex": "0x0632af48",
  "network": "arbitrum",
  "tokenId": "0x0000000000000000000000000000000000000000000000000003006580dd0001",
}
`;

exports[`With Registry Account Risk Risk Factors: Leveraged nToken 1`] = `
Object {
  "_isTokenBalance": true,
  "hex": "0x1ba108c2185e9800",
  "network": "arbitrum",
  "tokenId": "0x0000000000000000000000000000000000000000",
}
`;

exports[`With Registry Account Risk Risk Factors: Leveraged nToken 2`] = `
Object {
  "_isTokenBalance": true,
  "hex": "0x0b23e5b94582f100",
  "network": "arbitrum",
  "tokenId": "0x0000000000000000000000000000000000000000",
}
`;

exports[`With Registry Account Risk Risk Factors: Leveraged nToken 3`] = `80.0881494`;

exports[`With Registry Account Risk Risk Factors: Leveraged nToken 4`] = `124.8624181`;

exports[`With Registry Account Risk Risk Factors: Leveraged nToken 5`] = `0.7340701832704267`;

exports[`With Registry Account Risk Risk Factors: Leveraged nToken 6`] = `4.022134911`;

exports[`With Registry Account Risk Risk Factors: Leveraged nToken 7`] = `
Object {
  "_isTokenBalance": true,
  "hex": "0x02a3040219a7b171",
  "network": "arbitrum",
  "tokenId": "0x0000000000000000000000000000000000000000",
}
`;

exports[`With Registry Account Risk Risk Factors: Leveraged nToken 8`] = `
Object {
  "_isTokenBalance": true,
  "hex": "0x069079d6",
  "network": "arbitrum",
  "tokenId": "0x18b0fc5a233acf1586da7c199ca9e3f486305a29",
}
`;

exports[`With Registry Account Risk Risk Factors: Leveraged nToken w/ Liquidation Risk 1`] = `
Object {
  "_isTokenBalance": true,
  "hex": "0x05b93d08",
  "network": "arbitrum",
  "tokenId": "0x18b0fc5a233acf1586da7c199ca9e3f486305a29",
}
`;

exports[`With Registry Account Risk Risk Factors: Leveraged nToken w/ Liquidation Risk 2`] = `
Object {
  "_isTokenBalance": true,
  "hex": "0x033fd4d5",
  "network": "arbitrum",
  "tokenId": "0x18b0fc5a233acf1586da7c199ca9e3f486305a29",
}
`;

exports[`With Registry Account Risk Risk Factors: Zero Haircut Collateral 1`] = `
Object {
  "_isTokenBalance": true,
  "hex": "-0xd542ebab6a7c00",
  "network": "arbitrum",
  "tokenId": "0x0000000000000000000000000000000000000000",
}
`;
